# pdf-reader

./: .gitignore  AGENTS.md  CLAUDE.md
.beads/: issues.jsonl
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.README.md
backend/src/: main.rs
backend/src/api/: chat.rs  documents.rs  metadata.rs  mod.rs  upload.rs
backend/src/claude/: client.rs  mod.rs  types.rs
backend/src/db/: mod.rs  queries.rs  schema.rs
backend/src/error/: README.md  mod.rs
backend/src/models/: chat.rs
backend/src/storage/: local.rs  mod.rs  trait.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ChatWidget.tsx  Home.tsx  MarkdownRenderer.tsx  PdfViewer.tsx  Upload.tsx
frontend/src/lib/: api.ts  pageLinks.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts
