[package]
name = "pdf-reader-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.5"
base64 = "0.22"
async-trait = "0.1"
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
